phase-V-cloud-deployment/k8s/audit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit
  labels:
    app: audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit
  template:
    metadata:
      labels:
        app: audit
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "audit"
        dapr.io/app-port: "8003"
        dapr.io/config: "dapr-config"
        dapr.io/components: "kafka-pubsub,statestore"
    spec:
      containers:
      - name: audit
        image: todo-audit-service:latest
        ports:
        - containerPort: 8003
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: audit-service
spec:
  selector:
    app: audit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
  type: ClusterIP
