phase-V-cloud-deployment/k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "notification"
        dapr.io/app-port: "8002"
        dapr.io/config: "dapr-config"
        dapr.io/components: "kafka-pubsub,jobs"
    spec:
      containers:
      - name: notification
        image: todo-notification-service:latest
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
  type: ClusterIP
